--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.11.0",
     "sass": "^1.64.1",
+    "tsparticles": "^2.11.1",
+    "tsparticles-slim": "^2.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
