--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.64.1",
     "tsparticles": "^2.11.1",
     "tsparticles-slim": "^2.11.1",
+    "vanilla-tilt": "^1.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
