--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.12.2",
     "loaders.css": "^0.1.2",
+    "programming-languages-logos": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -20,8 +21,10 @@
     "react-loaders": "^3.0.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-tsparticles": "^2.11.0",
     "sass": "^1.64.1",
+    "slick-carousel": "^1.8.1",
     "tsparticles": "^2.11.1",
     "tsparticles-slim": "^2.11.1",
     "vanilla-tilt": "^1.8.0",
