--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-loaders": "^3.0.1",
+    "react-pdf": "^7.3.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
