--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-spring/web": "^9.7.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "framer-motion": "^10.15.0",
+    "gsap": "^3.12.2",
     "gsap-trial": "^3.12.2",
     "loaders.css": "^0.1.2",
+    "locomotive-scroll": "^4.1.4",
     "programming-languages-logos": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
